# oaproxy

./: COPYING  Makefile.am  README.md  configure.ac  oaproxy.conf  oaproxy.service.in
src/: b64.c  b64.h  gaccounts.c  gaccounts.h  imap.c  imap.h  imap_cmd.c  imap_cmd.h  imap_reply.c  imap_reply.h  main.c  server.c  server.h  smtp.c  smtp.h  smtp_cmd.c  smtp_cmd.h  smtp_reply.c  smtp_reply.h  ssl.c  ssl.h  xmalloc.c  xmalloc.h  xoauth2.c  xoauth2.h
test/: b64.c  imap.c  imap_cmd.c  imap_reply.c  server.c  smtp.c  smtp_cmd.c  smtp_reply.c  xoauth2.c
